--- a/src/eventHandlers.yml
+++ b/src/eventHandlers.yml
@@ -37,7 +37,7 @@ pull_request.assigned: []
 pull_request.unassigned: []
 pull_request.labeled: []
 pull_request.unlabeled: []
-pull_request.opened: [rulesEngineHandler]
+pull_request.opened: [repositoryHygiene]
 pull_request.edited: []
 pull_request.closed: []
 pull_request.reopened: []
