--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "probot-config": "^1.1.0",
     "serve-favicon": "^2.5.0",
     "swagger-ui-express": "^4.1.6",
+    "uuid": "^9.0.0",
     "yq": "^0.0.1"
   },
   "devDependencies": {
